src/test/ui/invalid-self-argument/bare-fn-start.rs
fn a(&self) { }
//~^ ERROR unexpected `self` argument in function
//~| NOTE `self` is only valid as the first argument of an associated function

fn main() { }
