src/test/ui/invalid-self-argument/bare-fn-start.stderr
error: unexpected `self` argument in function
  --> $DIR/bare-fn-start.rs:1:6
   |
LL | fn a(&self) { }
   |      ^^^^^ not valid as function argument
   |
   = note: `self` is only valid as the first argument of an associated function

error: aborting due to previous error

